# world-model

./: .env  .gitignore  .gitmodules  .golangci.yml  README.md  cliff.toml  devbox.json  justfile  lefthook.yml  pyproject.toml
lab_env/: cli.py  config.py  config.toml  config.toml.example  docker_utils.py  logging_utils.py  main.py  pyproject.toml  sim_host.py
lab_env/navlab/orchestration/: artifacts.py  cli.py  config.py  foxglove_upload.py  host.py
lab_env/navlab/runtime/: acceptance.py  cli.py  companion.py  config.py  doctor.py  logger.py  process_manager.py
lab_env/sim/: __init__.py  front_sector.py  front_sector_consumer.py  rosbag.py  runtime.py  waypoints.py
lab_env/sim/nodes/: __init__.py  auto_mission_monitor.py  cmd_vel_executor.py  front_sector_consumer.py  mavlink_external_nav_sender.py  mavlink_gazebo_pose_mirror.py  mavlink_hold_hover_controller.py  mavlink_local_setpoint_controller.py  mavlink_obstacle_mission_controller.py  mavlink_stage1_observer.py  scan_features_publisher.py  waypoint_follower.py  world_marker_publisher.py
lab_env/sim/perception/: front_sector.py  scan_features.py
lab_env/sim/world/: world_markers.py
lab_env/tests/: test_cmd_vel_executor.py  test_docker_utils.py  test_front_sector.py  test_mavlink_gazebo_pose_mirror.py  test_mavlink_imu_bridge.py  test_mavlink_obstacle_mission_controller.py  test_navlab_acceptance_artifacts.py  test_navlab_acceptance_summary.py  test_navlab_artifacts.py  test_navlab_config.py  test_navlab_foxglove_upload.py  test_navlab_process_manager.py  test_rosbag.py  test_scan_features.py  test_sim_cli.py  test_waypoints.py  test_world_markers.py  test_x2_driver_smoke.py  test_x2_protocol.py  test_x2_protocol_config.py  test_x2_scan_source.py  test_x2_sensor_ownership.py  test_x2_sensor_runtime.py  test_x2_serial_emulator.py
navlab/: README.md  __init__.py  config.toml  pyproject.toml
navlab/common/: __init__.py  contracts.py  fcu_status.py  logging.py  pose.py  process_manager.py  toml_values.py
navlab/common/companion/: __init__.py
navlab/common/interfaces/: __init__.py
navlab/common/perception/: __init__.py  contract.py  front_sector.py  scan_features.py  scan_reference_drift.py
navlab/common/slam/: backends.py  cli.py  config.py  quality_gate.py  runtime.py
navlab/companion/: acceptance.py  acceptance_cli.py  cli.py  config.py  doctor.py  hover_acceptance.py  rosbag_profile.py  runtime.py
navlab/companion/nodes/: __init__.py  cmd_vel_executor.py  external_nav.py  gazebo_truth_odom.py  gazebo_truth_trajectory.py  hover_mission.py  imu_bridge.py  obstacle_mission.py  odom_relay.py  pose_mirror.py  scan_features.py  vehicle_markers.py  world_markers.py
navlab/companion/templates/: foxglove_notes.md.j2
navlab/gazebo_sensor/: __init__.py  airframe_disturbance.py  airframe_disturbance_runtime.py  cli.py  config.py  rangefinder.py  runtime.py  scan_integrity.py  scan_stabilization.py  scan_time_normalizer.py
navlab/gazebo_sensor/x2/: emulator.py  scan_source.py  smoke.py
navlab/real/: __init__.py
navlab/real/common/: __init__.py  fcu_status.py
navlab/real/companion/: __init__.py
navlab/sim/: __init__.py  status.py  waypoints.py
navlab/sim/common/: __init__.py
navlab/sim/companion/: __init__.py
navlab/sim/gazebo_sensor/: airframe_disturbance.py  airframe_disturbance_runtime.py  benewake_tfmini_serial.py  cli.py  cloud_scan_projection.py  config.py  range_projection.py  rangefinder.py  runtime.py  scan_integrity.py  scan_stabilization.py  scan_time_normalizer.py
navlab/sim/world/: __init__.py  world_markers.py
navlab/slam/: __init__.py  backends.py  cli.py  config.py  runtime.py
navlab/tests/common/: test_contracts.py  test_front_sector.py  test_hover_source_audit.py  test_process_manager.py  test_rosbag.py
navlab/tests/companion/: test_acceptance_artifacts.py  test_acceptance_summary.py  test_cmd_vel_executor.py  test_config.py  test_external_nav_sender.py  test_external_nav_source_selector.py  test_gazebo_truth_odom.py  test_gazebo_truth_trajectory.py  test_height_estimator.py  test_hover_mission.py  test_imu_bridge.py  test_mission_fsm.py  test_mission_hover_evidence.py  test_mission_mavlink_commands.py  test_mission_pipeline.py  test_mission_prefix_stages.py  test_mission_runtime_state.py  test_mission_state_owners.py  test_mission_summary.py  test_obstacle_mission.py  test_policy.py  test_pose_mirror.py  test_scan_features.py  test_scan_reference_correction.py  test_scan_reference_drift.py  test_task_fsm.py  test_vehicle_markers.py  test_world_markers.py
navlab/tests/gazebo_sensor/: test_airframe_disturbance.py  test_rangefinder.py  test_scan_integrity.py  test_scan_stabilization.py
navlab/tests/sim/: test_waypoints.py
navlab/tests/slam/: test_cartographer_adapter_contract.py  test_cartographer_official_alignment.py  test_external_nav_bridge_contract.py  test_quality_gate.py  test_ros_workspace_ownership.py  test_runtime_config.py  test_sitl_external_nav_params.py
orchestration/: config.real.toml  config.simulation.toml  config.toml  main.py  pyproject.toml
orchestration/configs/: exploration.toml  hover.toml  motor_debug.toml  real_preflight.toml  real_prepare.toml  scan_robustness.toml
orchestration/real/: Cargo.toml  README.md  config.toml
orchestration/real/benches/: motor_debug_plan.rs
orchestration/real/src/: .preflight.rs.pending-snap  .prepare.rs.pending-snap  .task_doctor.rs.pending-snap  cli.rs  config.rs  contracts.rs  errors.rs  lib.rs  main.rs  ui.rs
orchestration/sim/: README.md  config.toml  go.mod  go.sum
orchestration/src/: artifacts.py  cli.py  config.py  foxglove_upload.py  host.py  images.py  logger_utils.py  project_config.py
orchestration/src/configs/: project_config.py  run_config.py  task_config.py
orchestration/tests/: conftest.py  test_airframe_disturbance_gate.py  test_artifacts.py  test_cli.py  test_config.py  test_foxglove_upload.py  test_logger_utils.py  test_motor_debug.py  test_p9_foxglove_replay.py  test_real_prepare.py  test_runtime_backend.py  test_task_registry.py
scripts/command/: pyproject.toml
(+647 files in other folders)
