[project]
name = "world-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.4.2", "pyright>=1.1.408", "ruff>=0.15.11"]
lab_env = [
    "dronecan>=1.0.27",
    "empy==3.3.4",
    "fastapi>=0.136.1",
    "future>=1.0.0",
    "intelhex>=2.3.0",
    "lxml>=6.1.0",
    "matplotlib>=3.10.9",
    "mavproxy>=1.8.74",
    "numpy>=2.4.5",
    "pexpect>=4.9.0",
    "pymavlink>=2.4.49",
    "pyserial>=3.5",
    "python-on-whales>=0.81.0",
    "rich>=14.1.0",
    "typer>=0.25.1",
]


[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # https://docs.astral.sh/ruff/rules/#error-e
    "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",  # https://docs.astral.sh/ruff/rules/#isort-i
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
ignore = ["F401"]

[tool.pyright]
exclude = [ #
    ".git",
    "**/__pycache__",
    ".cache",
    ".idea",
    ".vscode",
    ".venv",
    ".devbox",
    "db/",
    "data/",
    "temp/",
    "logs/",
    "vendor/",
    "output/",
    "**/node_modules",
    "**/.*",
]
