[project]
name = "lab-env"
version = "0.1.0"
description = "Host CLI and sim runtime dependencies for the lab environment"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = ["loguru>=0.7.3"]

[dependency-groups]
dev = ["pytest>=8.4.2", "pyright>=1.1.408", "ruff>=0.15.11"]
host = ["python-on-whales>=0.81.0", "rich>=14.1.0", "typer>=0.25.1"]
sim = ["numpy>=2.4.5", "PyYAML>=6.0.2"]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
