[project]
name = "lab-env"
version = "0.1.0"
description = "Host CLI and sim runtime dependencies for the lab environment"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "tomli-w>=1.2.0",
    "typer>=0.25.1",
]

[dependency-groups]
dev = ["pytest>=8.4.2", "pyright>=1.1.408", "ruff>=0.15.11"]
host = ["python-on-whales>=0.81.0", "rich>=14.1.0"]
sim = [
    "catkin-pkg>=1.1.0",
    "empy==3.3.4",
    "lark>=1.3.1",
    "numpy>=2.4.5",
    "pymavlink>=2.4.49",
    "PyYAML>=6.0.2",
]
gazebo-sensor = [
    "numpy>=2.4.5",
    "PyYAML>=6.0.2",
]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
