[project]
name = "navlab-runtime"
version = "0.1.0"
description = "Container-side NavLab runtime packages."
requires-python = ">=3.11"
dependencies = ["jinja2>=3.1.6", "loguru>=0.7.3", "typer>=0.25.1"]

[dependency-groups]
companion = [
    "catkin-pkg>=1.1.0",
    "empy==3.3.4",
    "lark>=1.3.1",
    "numpy>=2.4.5",
    "pymavlink>=2.4.49",
    "PyYAML>=6.0.2",
]
gazebo-sensor = ["numpy>=2.4.5", "pymavlink>=2.4.49", "PyYAML>=6.0.2"]
dev = ["pytest>=8.4.2", "pyright>=1.1.408", "ruff>=0.15.11"]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
