[project]
name = "command"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "mcap>=1.3.1",
    "mcap-ros2-support>=0.5.7",
    "pyserial>=3.5",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[dependency-groups]
dev = ["pytest>=8.4.2", "pyright>=1.1.408", "ruff>=0.15.11"]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
