<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>indoor_bringup</name>
  <version>0.1.0</version>
  <description>Indoor scenario bringup skeleton.</description>
  <maintainer email="support@example.com">admin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cartographer_indoor</exec_depend>
  <exec_depend>external_nav_bridge</exec_depend>
  <exec_depend>fake_external_nav</exec_depend>
  <exec_depend>imu_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
