<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navlab_slam_bringup</name>
  <version>0.1.0</version>
  <description>NavLab indoor SLAM bringup for scan, IMU, odometry, and ExternalNav output.</description>
  <maintainer email="support@example.com">admin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>navlab_cartographer_adapter</exec_depend>
  <exec_depend>navlab_external_nav_bridge</exec_depend>
  <exec_depend>navlab_fake_odom</exec_depend>
  <exec_depend>navlab_slam_imu_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
